WIP @ resource-optimization/fixes
